# mcp-server-birdparadise

./: .gitignore  LICENSE  pyproject.toml
mcp_server/: bird_paradise_read_server.py  bird_paradise_server.py  bird_paradise_write_server.py
mcp_server/database/tables/: Erzeugungsskript Tabelle category - text.txt  Erzeugungsskript Tabelle commercial_parameters - text.txt  Erzeugungsskript Tabelle customers - text.txt  Erzeugungsskript Tabelle employees - text.txt  Erzeugungsskript Tabelle inventory - text.txt  Erzeugungsskript Tabelle inventory_storagelocations - text.txt  Erzeugungsskript Tabelle invoices - text.txt  Erzeugungsskript Tabelle invoices_status - text.txt  Erzeugungsskript Tabelle orders - text.txt  Erzeugungsskript Tabelle orders_status - text.txt  Erzeugungsskript Tabelle products - text.txt  Erzeugungsskript Tabelle suppliers - text.txt  Erzeugungsskript Tabelle users - text.txt
mcp_server/database/utils/: capabilities.py  connect.py  custom_queries.py  prompts.py
tests/: test_capas.py
